--- a/secure/src/main/resources/templates/index.html
+++ b/secure/src/main/resources/templates/index.html
@@ -115,6 +115,7 @@
                 
                 <div class="card-footer bg-white border-top-0 d-flex flex-column pb-3">
                     <a th:href="@{/insurance/{id}/details(id=${insurance.id})}" class="btn btn-outline-info w-100 mb-2 fw-bold"><i class="bi bi-eye"></i> Gestión Integral</a>
+                    <a sec:authorize="hasAnyRole('ADMIN', 'MANAGER', 'WORKER')" th:href="@{/insurance/{id}/details(id=${insurance.id})}" class="btn btn-outline-warning w-100 mb-2 fw-bold"><i class="bi bi-exclamation-triangle"></i> Reportar Siniestro</a>
                     <div class="d-flex justify-content-between" sec:authorize="hasAnyRole('ADMIN', 'MANAGER')">
                         <a th:href="@{/edit/{id}(id=${insurance.id})}" class="btn btn-sm btn-outline-primary w-50 me-1"><i class="bi bi-pencil"></i> Editar</a>
                         <a th:href="@{/delete/{id}(id=${insurance.id})}" class="btn btn-sm btn-outline-danger w-50 ms-1" onclick="return confirm('¿Seguro?');"><i class="bi bi-trash"></i></a>
