--- a/secure/src/main/resources/templates/form.html
+++ b/secure/src/main/resources/templates/form.html
@@ -34,6 +34,7 @@
                             <div class="col-md-6 mb-3">
                                 <label class="form-label fw-bold">Categoría</label>
                                 <select class="form-select" th:field="*{category}">
+                                    <option value="" disabled selected>-- Seleccione --</option>
                                     <option value="Salud">Salud</option>
                                     <option value="Vehículo">Vehículo</option>
                                     <option value="Hogar">Hogar</option>
@@ -77,6 +78,7 @@
                             <div class="col-md-6 mb-3">
                                 <label class="form-label">Periodo de Pago</label>
                                 <select class="form-select" th:field="*{paymentPeriod}">
+                                    <option value="" disabled selected>-- Seleccione --</option>
                                     <option value="MONTHLY">Mensual</option>
                                     <option value="QUARTERLY">Trimestral</option>
                                     <option value="YEARLY">Anual</option>
