--- a/wallet-web/src/main/resources/templates/login.html
+++ b/wallet-web/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
         Sesión cerrada correctamente
     </div>
     <div th:if="${param.success}" class="alert alert-success text-center">
-        Registro exitoso. Inicia sesión.
+        Registro exitoso. activa tu cuenta en el correo electrónico para iniciar sesión.
     </div>
     <div th:if="${param.roleApproved}" class="alert alert-success text-center">
          Rol aprobado correctamente. <br>Inicia sesión con tu nuevo rol.
